# cmgoold.com

./: .gitignore  Cargo.toml  Dockerfile  README.rst  compose.deploy.yaml  compose.dev.yaml  compose.prod.yaml
.github/workflows/: deploy.yaml  test.yaml
_assets/posts/hello-world/: metadata.toml  post.md
_assets/posts/ordinal-models/: metadata.toml  post.md
_assets/posts/test/: metadata.toml  post.md
_assets/styles/: main.css
_assets/styles/tailwind/: base.css  package.json  tailwind.config.js
_assets/templates/: about.html  base.html  footer.html  index.html  navigation.html  post.html  posts-details.html  posts.html
assets/posts/animal-personality-operationalism/: metadata.toml  post.html
assets/posts/bayes-confidence-intervals/: metadata.toml  post.html
assets/posts/bma-stan/: metadata.toml  post.html  post.md
assets/posts/crime-demograhpics-causality/: metadata.toml  post.html
assets/posts/dogs-causal-pointing/: metadata.toml  post.html
assets/posts/hello-world/: metadata.toml  post.md
assets/posts/ioannidis-why-most-research/: metadata.toml  post.html
assets/posts/monty-hall-bayes/: metadata.toml  post.html
assets/posts/resolution-2025/: metadata.toml  post.html  post.md
assets/posts/shelter-dog-math/: latent-severity.stan  metadata.toml  post.html
assets/scripts/: data-theme-toggle.js
assets/styles/: main.css
assets/templates/: about.html  base.html  contact.html  footer.html  navigation.html  post.html  posts-details.html  posts.html
nginx/: nginx.conf
src/: contact.rs  handlers.rs  lib.rs  main.rs  metadata.rs
(+29 files in other folders)
