[package]
name = "cmgoold"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
tera = { version = "1", features = ["builtins"] }
lazy_static = "1.5.0"
regex = "1"
ignore = "0.4.23"
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
lettre = "0.11"
dotenv = "0.15.0"
openssl = { version = "0.10.71", features = ["vendored"] }
whatlang = "0.16.4"
